# latte-chain

./: .gitignore  Cargo.toml  readme.md
crates/chain/: Cargo.toml
crates/chain/src/: block_executor.rs  blockchain.rs  canonical.rs  error.rs  genesis.rs  lib.rs  merkle.rs  storage_error.rs  validator.rs
crates/codec/src/: codec.rs  error.rs
crates/consensus/: Cargo.toml
crates/p2p/: Cargo.toml
crates/primitives/: Cargo.toml
crates/primitives/src/: address.rs  bytes.rs  crypto.rs  error.rs  hash.rs  lib.rs
crates/state/: Cargo.toml
crates/state/src/: account_db.rs  context.rs  error.rs  executor.rs  lib.rs  state.rs  vm.rs
crates/storage/: Cargo.toml
crates/storage/src/: block_storage.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: account.rs  block.rs  header.rs  lib.rs  receipt.rs  transaction.rs
crates/vm/: Cargo.toml
crates/vm/src/: engine.rs  error.rs  gas.rs  instruction.rs  interpreter.rs  lib.rs  stack.rs
docs/: runtime.md  type.md  vm.md
docs/creates/: blake3.md  ed25519-dalek.md
