[package]
name = "latte-chain"
version = "0.1.0"
edition = "2024"

[dependencies]
latte-vm = { path = "../vm" }
latte-types = { path = "../types" }
latte-primitives = { path = "../primitives" }
latte-state = { path = "../state" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.17"
tracing = "0.1"
chrono = "0.4"
postcard = { version = "1.0", features = ["alloc"] }